<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/prof_pic"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/prof_pic"/>
    <TextView
        android:id="@+id/medication"
android:layout_marginTop="50dp"
        android:layout_marginLeft="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:text="@string/Medication"
        android:textSize="35sp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/sickness"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="0sp"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/sickness"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/Disease"
            android:textSize="35sp"
            />

        <TextView
            android:id="@+id/sicknessType"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="0sp"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/insertDisease"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/sickness"
            />

    </LinearLayout>

    <TextView
android:id="@+id/tablets"
        android:layout_marginLeft="0sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Medicines"
        android:textSize="45sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bk">

        <TextView
            android:id="@+id/drugSpecification"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:text="@string/tablet"
            android:textSize="30dp"
            android:textColor="@color/wh"
            android:layout_marginLeft="55dp"/>

        <TextView
            android:id="@+id/method"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/how_taken"
            android:textSize="30dp"
            android:textColor="@color/sickness"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/dose"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:text="@string/number"
            android:textSize="30dp"
            android:textColor="@color/wh"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bk">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40sp"
            android:src="@drawable/choice" />
        <TextView
            android:id="@+id/one"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/drug_1"
            android:textSize="30dp"
            android:textColor="@color/wh"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/oneM"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/mode_1"
            android:textSize="30dp"
            android:textColor="@color/sickness"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/oneD"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/num_1"
            android:textSize="30dp"
            android:textColor="@color/wh"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bk">
        <ImageView
            android:layout_width="60sp"
            android:layout_height="40sp"
            android:src="@drawable/choice"/>

        <TextView
            android:id="@+id/two"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/drug_2"
            android:textSize="30dp"
            android:textColor="@color/wh"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/twoM"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/mode_1"
            android:textSize="30dp"
            android:textColor="@color/sickness"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/twoD"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/num_1"
            android:textSize="30dp"
            android:textColor="@color/wh"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bk">
        <ImageView
            android:layout_width="60sp"
            android:layout_height="40sp"
            android:src="@drawable/choice"/>

        <TextView
            android:id="@+id/three"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/drug_3"
            android:textSize="30dp"
            android:textColor="@color/wh"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/threeM"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/mode_2"
            android:textSize="30dp"
            android:textColor="@color/sickness"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/threeD"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/num_2"
            android:textSize="30dp"
            android:textColor="@color/wh"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>


</LinearLayout>